--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
           <input class="submit_button" type="submit" value="Subscribe to monthly newsletter" class="btn" />
         </form>
     </div>
-    <div  class="sign_up_container_section">
-      <img class="sign_up_img" src="assets/images/illustration-sign-up-desktop.svg" alt="sign up image" />
-    </div>
+    <img id="sign_up_img" class="sign_up_img" src="assets/images/illustration-sign-up-desktop.svg" alt="sign up image" >
   </div>
      <!-- Sign-up form end -->
 
@@ -60,9 +58,5 @@
     </button>
   </div>
     <!-- Success message end -->
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 </html>
